--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,24 @@
 body{
   padding: 0;
-  margin: 0;
+  margin: 2.5em;
   background-color: #000;
   color:#FFF;
+}
 
+button{
+  background-color: #000;
+  border-radius: 7px;
+}
+
+.boxname{
+  width: 11em;
+  vertical-align: middle;
+  background-color: #A62B1C /*#471630*/;
+  border-radius: 15px;
+  text-align: center;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  margin-top: 1em;
+  margin-left: 0.3em;
+  margin-right: 0.3em;
 }
